# LinAlg

./: .gitignore  CMakeLists.txt  Matrix.cpp  Matrix.h  README.md  linalg.pc.in  main.cpp
include/: LinAlg.h
linalg.lib/: CMakeLists.txt
linalg.lib/include/: LinAlg.h
linalg.lib/src/: LinAlg.cpp  main.cpp
linalg.module/: setup.py  test.py
linalg.module/include/: linalgmodule.h
linalg.module/src/: linalgmodule.cpp
module/: linalgmodule.cpp  linalgmodule.h  setup.py
src/: LinAlg.cpp  main.cpp
